--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/fastjson-1.2.29.jar"/>
 	<classpathentry kind="lib" path="lib/okhttp-3.6.0.jar"/>
 	<classpathentry kind="lib" path="lib/okio-1.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk15-1.46.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
